2006-12-20 Laurent Laville <pear@laurent-laville.org>

      - fixed bug #8684 : Problem with generated JavaScript

2006-08-12 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Final version (stable) 2.1.0 released.

      - The Definitive Guide has a new FAQ up-to-date, new examples (see
        Appendixes section) and finally a guide for HTML_Progress2_Generator

2006-08-11 Laurent Laville <pear@laurent-laville.org>

      - HTMLPage2, ITDynamic, and SmartyDynamic renderers for Progress2 Generator
        used now the new architecture with external stylesheet.

2006-08-10 Laurent Laville <pear@laurent-laville.org>

      - fix value return by apiVersion()
      - progress meter use now its own event dispatcher (called "ProgressMeter")

2006-08-09 Laurent Laville <pear@laurent-laville.org>

      - Rewrites of HTML_Progress2 Generator class on PEAR_PackageFileManager_Frontend controller pattern
        This essentially allow to improve presentation layout with stylesheet,
        and give more power to add a new action or page at runtime.
      - All remaining code (css class selector still in default renderer was moved
        to external CSS file: 'default.css')
      - new methods get and set StyleSheet into default QF renderer (Generator/Default.php)

2006-07-22 Laurent Laville <pear@laurent-laville.org>

      - fixes Bug #8265 : HTML_Page2 wrong dependency
      - removed dupplicates entries in package xml 1.0

2006-06-04 Laurent Laville <pear@laurent-laville.org>

      - fixes typo error on removeListener() function
        from HTML_Progress2 and HTML_Progress2_Monitor classes
      - updates copyright (begin) date
      - addListener() and removeListener() signatures changed.
        Adds notification name serves as a filter

2006-05-24 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Final version (stable) 2.0.1 released.

      - fixes closing html style tag to avoid javascript error.
      - fixes Bug #7437 : wrong text in Doc